--- a/Game/Packages/manifest.json
+++ b/Game/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.ai.assistant": "1.0.0-pre.12",
     "com.unity.ai.generators": "1.0.0-pre.19",
     "com.unity.ai.inference": "2.3.0",
+    "com.unity.ai.navigation": "2.0.9",
     "com.unity.collab-proxy": "2.9.2",
     "com.unity.feature.development": "1.0.2",
     "com.unity.inputsystem": "1.14.2",
